Added trailing slash to OutDir and IntDir

--- a/mustang_midi.vcxproj
+++ b/mustang_midi.vcxproj
@@ -116,8 +116,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)obj\$(Configuration)</OutDir>
-    <IntDir>$(SolutionDir)obj\$(Configuration)</IntDir>
+    <OutDir>$(SolutionDir)obj\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)obj\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
